# sbk-scraping

./: .gitignore  .projections.json  pyproject.toml
.github/workflows/: on-pull-request.yml  poetry.yml
sbk_scraping/: config.py  constants.py  parser.py  utils.py
sbk_scraping/parser/: common.py  factories.py  logger.py  scrapy_parser.py
sbk_scraping/parser/dynamic/: json_parser.py
tests/: config_test.py  conftest.py  parser_test.py  test_sbk_scraping.py  utils_test.py
tests/parser/: common_test.py  factories_test.py  scrapy_parser_test.py
tests/parser/dynamic/: json_parser_test.py
tests/test_data/: book_to_scrape.html  data.json  invalid_content.json  invalid_parsers.json  parsers.json  srch_expressions.json
tests/test_data/config/: logging_config.yaml  parsers.json  parsers.yaml
