[tool.poetry]
name = "sbk-scraping"
version = "0.1.0"
description = ""
authors = ["Emmanuel Martínez <emartinez@seebak.com.mx>"]

[tool.poetry.dependencies]
python = "^3.9"
jmespath = "^0.10.0"
chompjs = "^1.1.6"
pydantic = "^1.8.2"
Scrapy = "^2.5.1"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
